# contextual-bandit-decision-ops

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation_methodology.md  interview_notes.md  operations.md  policy_card.md  release_checklist.md
reports/: baseline_policy_comparison.md  contextual_learning_policy_comparison.md  off_policy_evaluation.md  policy_promotion_gate.md  staging_observability_report.md  synthetic_bandit_log_summary.md
reports/portfolio/: release_0.1.0.md
scripts/: docker_smoke_test.sh  generate_demo.sh
src/contextual_bandit_decision_ops/: __init__.py  api.py  api_schemas.py  cli.py  comparison_cli.py  comparison_report.py  config.py  drift_monitoring.py  evaluation.py  event_log.py  learning_cli.py  learning_evaluation.py  learning_policies.py  learning_report.py  metadata_cli.py  monitoring_metrics.py  observability_cli.py  observability_report.py  off_policy.py  off_policy_cli.py  off_policy_report.py  policies.py  promotion_cli.py  promotion_gate.py  promotion_report.py  safety.py  schemas.py  service.py  service_cli.py  service_log_analysis.py  service_logging.py  simulation.py  smoke.py  synthetic.py  validation.py
tests/: test_metadata.py  test_milestone1.py  test_milestone2.py  test_milestone3.py  test_milestone4.py  test_milestone5.py  test_milestone6.py  test_milestone7.py  test_smoke.py
