[project]
name = "contextual-bandit-decision-ops"
version = "0.1.0"
description = "Deterministic contextual bandit simulation and decision operations."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
contextual-bandit-generate = "contextual_bandit_decision_ops.cli:main"
contextual-bandit-compare = "contextual_bandit_decision_ops.comparison_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
