[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "contextual-bandit-decision-ops"
version = "0.1.0"
description = "Deterministic contextual bandit simulation and decision operations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi",
    "httpx",
    "numpy",
    "pandas",
    "uvicorn",
]

[project.urls]
Repository = "https://github.com/AkshajKashyap/contextual-bandit-decision-ops"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
contextual-bandit-generate = "contextual_bandit_decision_ops.cli:main"
contextual-bandit-compare = "contextual_bandit_decision_ops.comparison_cli:main"
contextual-bandit-learn = "contextual_bandit_decision_ops.learning_cli:main"
contextual-bandit-ope = "contextual_bandit_decision_ops.off_policy_cli:main"
contextual-bandit-gate = "contextual_bandit_decision_ops.promotion_cli:main"
contextual-bandit-service = "contextual_bandit_decision_ops.service_cli:main"
contextual-bandit-observe = "contextual_bandit_decision_ops.observability_cli:main"
contextual-bandit-info = "contextual_bandit_decision_ops.metadata_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
